to much to describe, everything in PR
